kubernetes-networks/canary/canary-svc-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-svc
  namespace: canary
spec:
  selector:
    app: web
  type: ClusterIP
  clusterIP: None
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
